1. Apply opacity settings to inactive tabs.
2. Add config option of apps that should not use menu opacity - default is
   to exclude nspluginviewer and plugin-container (these are used to embed flash
   in browsers).
3. Add inkscape to list of apps to exclude opacity settings from.
4. Exclude opacity settings for chrome's libflashplugin instance.
5. Exclude opacity settings for openoffice.org.

1.5.1
-----
1. Fix drawing of square frames, when general setting set to round.
2. Dont draw thumbs on circular sliders - they dont look good!
3. Add options to set opacity for window and poup-menu backgrounds. The KDE SC4.5
   blur-behind hint is set when the opacity!=100
4. If hiding via kwin buttons, emit menubar & statusbar details when a window is
   mapped.

1.5.0
-----
1. Add option to set progressbar colour.
2. Add options to have squared sliders and/or scrollbar sliders even when
   general setting set to round.
3. Add option to use menubar colours for popup menus.
4. Add option to set alpha values used to draw etch/shadow effect.
5. Dont draw double shadow for coloured combo buttons.

1.4.1
-----
1. When drawing button-like checks and radios, do not drawn sunken if they are in
   a list/tree view.
2. Fix segfault on some systems due to gdk_x11_get_default_xdisplay usage.

1.4.0
-----
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
 3. Animate faded progressbars when animation enabled.
 4. Blend menubar and window titlebar gradients if:
         menubar, titlebar, and inactive titlebar gradients match AND
         not blending titlebar gradient AND
         using window titlebar colour for menubar AND
         extending window drag into menubar
 5. Default titlebar colours to window colours - matches KDE4 default.
 6. If using window border colours as menubar colours, and the active and inactive
    titlebar colours are the same, then always use the active titlebar text colour
    for the menubar.